@@ -9,6 +9,7 @@ Enhancements:
 - #7254 Ability to bind client to a network interface
 - #7263 Change name of Flatpak uploaded to snapshots
 - #7269 Reword file drag drop error to debug message
+- #7274 Only build necessary binaries
 
 1.14.6
 ======
